--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             colors: {
               brand: {
                 lime: '#ccff00',
-                dark: '#050505',
-                gray: '#111111',
+                dark: '#030303',
+                gray: '#0f0f0f',
                 silver: '#cfcfcf'
               }
             },
@@ -29,6 +29,7 @@
               'fade-in-up': 'fadeInUp 1s cubic-bezier(0.16, 1, 0.3, 1) forwards',
               'glitch': 'glitch 1s linear infinite',
               'pulse-slow': 'pulse 4s cubic-bezier(0.4, 0, 0.6, 1) infinite',
+              'spin-slow': 'spin 12s linear infinite',
             },
             keyframes: {
               marquee: {
@@ -55,10 +56,12 @@
         --ease-in-out-circ: cubic-bezier(0.85, 0, 0.15, 1);
       }
       body {
-        background-color: #050505;
+        background-color: #030303;
         color: #ffffff;
-        cursor: none; /* Hide default cursor */
+        cursor: none;
         overflow-x: hidden;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
       }
       a, button, input, textarea, select, .cursor-pointer {
         cursor: none;
@@ -78,15 +81,20 @@
         -webkit-text-stroke: 1px #ccff00;
         color: transparent;
       }
+      /* Clean, subtle grain */
       .bg-noise {
-        background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.65' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)' opacity='0.07'/%3E%3C/svg%3E");
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+        z-index: 9998;
+        pointer-events: none;
+        background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.8' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)' opacity='0.04'/%3E%3C/svg%3E");
       }
       ::selection {
         background: #ccff00;
         color: #000;
-      }
-      .blend-difference {
-        mix-blend-mode: difference;
       }
     </style>
   <script type="importmap">
@@ -96,12 +104,14 @@
     "react": "https://esm.sh/react@^19.2.3",
     "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
     "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "three": "https://esm.sh/three@0.160.0"
   }
 }
 </script>
 </head>
   <body>
     <div id="root"></div>
+    <div class="bg-noise"></div>
   </body>
 </html>
