feat: Implement custom scroll management and UI using Lenis, hiding default browser scrollbars.

--- a/index.html
+++ b/index.html
@@ -96,6 +96,14 @@
         background: #ccff00;
         color: #000;
       }
+      /* Hide Default Scrollbar */
+      ::-webkit-scrollbar {
+        display: none;
+      }
+      html {
+        -ms-overflow-style: none;
+        scrollbar-width: none;
+      }
     </style>
   <script type="importmap">
 {
