--- a/index.html
+++ b/index.html
@@ -368,6 +368,120 @@
       .stagger-4 { animation-delay: 0.4s; }
       .stagger-5 { animation-delay: 0.5s; }
       .stagger-6 { animation-delay: 0.6s; }
+
+      /* ============================================
+         SCROLL-DIRECTED STORYTELLING ANIMATIONS
+         ============================================ */
+
+      /* Base scroll reveal — hidden state */
+      .scroll-reveal {
+        opacity: 0;
+        transform: translateY(60px);
+        transition: opacity 0.9s cubic-bezier(0.16, 1, 0.3, 1),
+                    transform 0.9s cubic-bezier(0.16, 1, 0.3, 1),
+                    filter 0.9s cubic-bezier(0.16, 1, 0.3, 1);
+        will-change: opacity, transform;
+      }
+
+      /* Revealed state */
+      .scroll-reveal.scroll-visible {
+        opacity: 1;
+        transform: translateY(0);
+        filter: blur(0);
+      }
+
+      /* Directional variants */
+      .scroll-reveal-left {
+        opacity: 0;
+        transform: translateX(-80px);
+        transition: opacity 0.9s cubic-bezier(0.16, 1, 0.3, 1),
+                    transform 0.9s cubic-bezier(0.16, 1, 0.3, 1);
+        will-change: opacity, transform;
+      }
+      .scroll-reveal-left.scroll-visible {
+        opacity: 1;
+        transform: translateX(0);
+      }
+
+      .scroll-reveal-right {
+        opacity: 0;
+        transform: translateX(80px);
+        transition: opacity 0.9s cubic-bezier(0.16, 1, 0.3, 1),
+                    transform 0.9s cubic-bezier(0.16, 1, 0.3, 1);
+        will-change: opacity, transform;
+      }
+      .scroll-reveal-right.scroll-visible {
+        opacity: 1;
+        transform: translateX(0);
+      }
+
+      /* Scale variant */
+      .scroll-reveal-scale {
+        opacity: 0;
+        transform: scale(0.92);
+        filter: blur(4px);
+        transition: opacity 1s cubic-bezier(0.16, 1, 0.3, 1),
+                    transform 1s cubic-bezier(0.16, 1, 0.3, 1),
+                    filter 1s cubic-bezier(0.16, 1, 0.3, 1);
+        will-change: opacity, transform, filter;
+      }
+      .scroll-reveal-scale.scroll-visible {
+        opacity: 1;
+        transform: scale(1);
+        filter: blur(0);
+      }
+
+      /* Scroll stagger delays */
+      .scroll-stagger-1 { transition-delay: 0.05s; }
+      .scroll-stagger-2 { transition-delay: 0.12s; }
+      .scroll-stagger-3 { transition-delay: 0.2s; }
+      .scroll-stagger-4 { transition-delay: 0.3s; }
+      .scroll-stagger-5 { transition-delay: 0.4s; }
+      .scroll-stagger-6 { transition-delay: 0.52s; }
+
+      /* Hero parallax fade-out on scroll */
+      .hero-parallax-content {
+        transition: opacity 0.1s linear, transform 0.1s linear;
+        will-change: opacity, transform;
+      }
+
+      /* Word-level reveal for large headlines */
+      .word-reveal {
+        display: inline-block;
+        opacity: 0;
+        transform: translateY(100%);
+        transition: opacity 0.7s cubic-bezier(0.16, 1, 0.3, 1),
+                    transform 0.7s cubic-bezier(0.16, 1, 0.3, 1);
+      }
+      .scroll-visible .word-reveal {
+        opacity: 1;
+        transform: translateY(0);
+      }
+
+      /* Line draw animation */
+      .scroll-line-draw {
+        transform: scaleX(0);
+        transform-origin: left;
+        transition: transform 1.2s cubic-bezier(0.16, 1, 0.3, 1);
+      }
+      .scroll-line-draw.scroll-visible {
+        transform: scaleX(1);
+      }
+
+      /* Reduced motion override for scroll animations */
+      @media (prefers-reduced-motion: reduce) {
+        .scroll-reveal,
+        .scroll-reveal-left,
+        .scroll-reveal-right,
+        .scroll-reveal-scale,
+        .word-reveal,
+        .scroll-line-draw {
+          opacity: 1 !important;
+          transform: none !important;
+          filter: none !important;
+          transition: none !important;
+        }
+      }
     </style>
   <script type="importmap">
 {
